[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "1.0.0"
description = "command-line calculator"
authors = [{ name = "Jessin", email = "ja65@njit.edu" }]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["calculator"]
